# AiBookSummarizer

./: .gitignore  Dockerfile  docker-compose-deployment.yaml  docker-compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-deploy-changes.yaml
K8s/ekz/: deployment.yaml
K8s/ingress_controller/: deploy.yaml
K8s/mongodb/: override.secret.yaml  override.yaml  values.yaml
K8s/postgres/: override.secret.yaml  override.yaml  values.yaml
K8s/rabbitmq/: override.secret.yaml  values.yaml
backend/: .env  .env.example  pyproject.toml
backend/enums/: main_server.py
backend/errors/: exceptions.py  http.py
backend/migrations/: env.py
backend/migrations/versions/: 718177fa18d2_create_summary_table.py
backend/models/: postgres_metadata.py  scraper_worker.py  summary_worker.py
backend/services/main_server/: main.py  router.py
backend/services/scraper_worker/: main.py  utils.py
backend/services/scraper_worker/scrapers/: goodreads.py  isbndb.py  openlibrary.py
backend/services/summary_worker/: health_check.sh  main.py  utils.py
backend/validators/: main_server.py
frontend/: .env.local.example  middleware.js  package.json
frontend/app/: layout.js  page.js  providers.js
frontend/app/history/: page.js
frontend/components/: bookSummaryInterface.js  historyInterface.js  logo.js  navbar.js
frontend/lib/: auth0.js
